[package]
name = "repotools"
description = "Short names, big time savings. Repotools is a collection of commands with short but meaningful names, for the git operations you perform most often."
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/repotools"
version = "0.10.0-rc2"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
categories = ["command-line-utilities", "development-tools", "science"]
keywords  = ["git"]
edition = "2018"

[[bin]]
name = "dp"
required-features = ["dp"]

[[bin]]
name = "aa"
required-features = ["aa"]

[[bin]]
name = "st"
required-features = ["st"]

[[bin]]
name = "di"
required-features = ["di"]

[[bin]]
name = "cm"
required-features = ["cm"]

[[bin]]
name = "pu"
required-features = ["pu"]

[[bin]]
name = "le"
required-features = ["le"]

[[bin]]
name = "sq"
required-features = ["sq"]

[features]
default = ["dp","aa","st","di","cm","pu","le","sq"]
dp = []
aa = []
st = []
di = []
cm = []
pu = []
le = []
sq = ["dep:ulid"]

[dependencies]
clap = { version = "2", default-features = false, features = ["yaml"] }
ulid = { version = "1", optional = true }
exec = "0.3"
