[package]
name = "cm2"
description = "git commit with message"
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/repotools/tree/master/cm2"
version = "0.9.0"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"

[[bin]]
name = "cm"
path = "src/main.rs"

[build-dependencies]
toml = "0.5.5"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
exec = "0.3.1"
