[package]
name = "pu2"
description = "push commits or tags to remote git repository"
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/repotools/tree/master/pu2"
version = "0.5.1"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"

[[bin]]
name = "pu"
path = "src/main.rs"

[build-dependencies]
toml = "0.5.5"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
exec = "0.3.1"
