[package]
name = "repotools"
description = "Short names, big time savings. Repotools is a collection of commands with short but meaningful names, for the git operations you perform most often."
license = "ISC"
readme = "../README.md"
repository = "https://github.com/ctsrc/repotools"
version = "0.7.2"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
categories = ["command-line-utilities", "development-tools", "science"]
keywords  = ["git"]
edition = "2018"

[[bin]]
name = "dp"
path = "src/dp2/main.rs"
required-features = ["dp"]

[[bin]]
name = "aa"
path = "src/aa2/main.rs"
required-features = ["aa"]

[[bin]]
name = "st"
path = "src/st2/main.rs"
required-features = ["st"]

[[bin]]
name = "di"
path = "src/di2/main.rs"
required-features = ["di"]

[[bin]]
name = "cm"
path = "src/cm2/main.rs"
required-features = ["cm"]

[[bin]]
name = "pu"
path = "src/pu2/main.rs"
required-features = ["pu"]

[[bin]]
name = "le"
path = "src/le2/main.rs"
required-features = ["le"]

[features]
default = ["dp","aa","st","di","cm","pu","le"]
dp = []
aa = []
st = []
di = []
cm = []
pu = []
le = []

[build-dependencies]
toml = "0.5.5"

[dependencies]
clap = { version = "2.33.0", default-features = false, features = ["yaml"] }
exec = "0.3.1"
