[package]
name = "cm2"
publish = false
description = "git commit with message"
license = "ISC"
repository = "https://github.com/ctsrc/repotools/tree/master/cm2"
version = "0.9.2"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"

[[bin]]
name = "cm"
path = "src/main.rs"

[build-dependencies]
toml = "0.5.5"

[dependencies]
clap = { version = "2.33.0", default-features = false, features = ["yaml"] }
exec = "0.3.1"
