[package]
name = "di2"
publish = false
description = "diff files staged for commit in git repository, optionally limited to a given file or directory"
license = "ISC"
repository = "https://github.com/ctsrc/repotools/tree/master/di2"
version = "0.8.1"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"

[[bin]]
name = "di"
path = "src/main.rs"

[build-dependencies]
toml = "0.5.5"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
exec = "0.3.1"
