[package]
name = "st2"
publish = false
description = "status of git repository, optionally limited to one or more files or directories"
license = "ISC"
repository = "https://github.com/ctsrc/repotools/tree/master/st2"
version = "0.9.4"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"

[[bin]]
name = "st"
path = "src/main.rs"

[build-dependencies]
toml = "0.5.5"

[dependencies]
clap = { version = "2.33.0", default-features = false, features = ["yaml"] }
exec = "0.3.1"
